syntax = "proto3";

package jsmith.nknsdk.network.proto;


// --- BEGIN PAYLOADS ---

enum PayloadType {
    BINARY = 0;
    TEXT = 1;
    ACK = 2;

    SESSION = 3;
}

message EncryptedMessage {
    bytes payload = 1;
    bool encrypted = 2;
    bytes nonce = 3;
}

message Payload {
    PayloadType type = 1;
    bytes pid = 2;
    bytes data = 3;
    bytes reply_to_pid = 4;
    bool no_ack = 5;
}

message TextData {
    string text = 1;
}

message SessionData {
    uint32 sequence_id = 1;
    bytes data = 2;

    repeated uint32 ack_start_seq = 3;
    repeated uint32 ack_seq_count = 4;
    repeated string identifier_prefix = 5;
    uint32 window_size = 7;
    uint32 mtu = 8;
    bool close = 9;
}
// --- END PAYLOADS ---


enum MessageType {
    CLIENT_MSG = 0;
    NODE_MSG = 1;
    RECEIPT_MSG = 2;
}

message Message {
    MessageType message_type = 1;
    bytes message = 2;
}

message ClientMsg {
    string dest = 1;
    bytes payload = 2;
    repeated string dests = 3;
    uint32 max_holding_seconds = 4;
    uint32 nonce = 5;
    bytes block_hash = 6;
    repeated bytes signatures = 7;
}

message NodeMsg {
    string src = 1;
    bytes payload = 2;
    bytes prev_signature = 3;
}

message ReceiptMsg {
    bytes prev_signature = 1;
    bytes signature = 2;
}
